fix page breaks in compact theme for PDFs
page-break-after: avoid; is not yet implemented in FF

--- a/themes/compact/src/compact-html.css
+++ b/themes/compact/src/compact-html.css
@@ -37,6 +37,14 @@ main {
   margin: 0 auto;
 }
 
+main > section > header {
+  page-break-after: avoid;
+}
+
+main > section > div {
+  page-break-inside: avoid;
+}
+
 section {
   margin-top: 1em;
 }
